2001-11-15  Neil Madden  <neil@tallniel.co.uk>

	* src/jacl/tcl/lang/ServerSocketChannel.java:
	* src/jacl/tcl/lang/SocketChannel.java:
	* src/jacl/tcl/lang/SocketCmd.java:
	* src/jacl/tcl/lang/SocketConnectionEvent.java:
	Add initial socket implementation for both client
	and server sockets. The code does not work with
	async sockets and its functionality is limited
	because of the lack of fconfigure and fileevent
	commands in Jacl.

2001-11-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ExecCmd.java (cmdProc): If an
	exec'ed subprocess exits with a non-zero status
	set the error code to a three value list like
	{CHILDSTATUS PID NUMBER}.
	* tests/inprogress/ExecCmd.test: Test error code
	after a call to the exec command.

2001-06-03  Mo DeJong  <mdejong@redhat.com>

	* tests/tcl/interp.test: Add interp-32.1, it checks
	that the child's CWD is inherited from a parent's interp.

2001-06-03  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/EventuallyFreed.java (dispose): Make
	the dispose() method public, it was incorrectly changed
	from public when the EventuallyFreed class was created.

2001-05-12  Christian Krone  <christian.krone@softwareag.com>

	* src/jacl/tcl/lang/Util.java (findElement): Fix parsing of
	nested quoted braces in lists.
	* tests/tcl/lindex.test: Add test for parsing of nested
	quoted braces in list.

2001-05-12  Christian Krone  <christian.krone@softwareag.com>

	* tests/jacl/Interp.test: Add braces around the result
	for the Interp-5.1 test.

2001-05-12  Christian Krone  <christian.krone@softwareag.com>

	* src/jacl/tcl/lang/Interp.java (removeInterpResolver):
	Use Vector.removeElement()instead of Vector.remove()
	which is not supported by JDK 1.1.

2001-05-05  Mo DeJong  <mdejong@redhat.com>

	* tests/tcljava/JavaImportCmd.test: Fix incorrectly
	spelled error message that was causing test failures.

2001-05-05  Christian Krone  <christian.krone@softwareag.com>

	* src/jacl/tcl/lang/Interp.java (resolvers,